test/spec_vectors/store/fail/module_43.wat
(module (memory 1) (func (i32.store16 (f32.const 0) (i32.const 0))))